# wind-hybrid-open-controller

./: .buildinfo  .gitignore  LICENSE.txt  README.md  code_development.html  controllers.html  demo_main.py  demo_mpc.py  demo_simulate.py  environment.yml  examples.html  genindex.html  install_instructions.html  install_whoc.sh  interfaces.html  intro.html  logfloris  loghercules  objects.inv  pyproject.toml  run_whoc.py  search.html  searchindex.js  setup.py  wake_steering_design.html  wind-hybrid-open-controller.code-workspace
.github/workflows/: continuous-integration-workflow.yaml  deploy-pages.yaml
_sources/: code_development.md  controllers.md  examples.md  install_instructions.md  interfaces.md
docs/: _config.yml  _toc.yml  controllers.md  examples.md  install_instructions.md  interfaces.md  intro.md  wake_steering_design.md
examples/: NREL5MW_WindSpeedRelationships.txt  amr_input_25.inp  amr_input_25_precursor.inp  amr_precursor_analysis.ipynb  amr_precursor_original.inp  amr_precursor_original_0.inp  amr_precursor_original_1.inp  amr_precursor_original_2.inp  amr_precursor_original_3.inp  amr_precursor_original_4.inp  amr_precursor_original_5.inp  amr_precursor_working_0.inp  amr_precursor_working_1.inp  amr_precursor_working_2.inp  amr_precursor_working_3.inp  amr_precursor_working_4.inp  amr_precursor_working_5.inp  compute_turbine_amr_table.py  figures.pptx  generate_conda_yaml.sh  hercules_input_001.yaml  install_amr.sh  logamr  out.run_amr_precursor_working_0.sh_4624354  out.run_test_amr_precursor.sh_4361513  readme.txt  run_amr_precursor.sh  run_amr_precursor_0.sh  run_amr_precursor_1.sh  run_amr_precursor_2.sh  run_amr_precursor_3.sh  run_amr_precursor_4.sh  run_amr_precursor_5.sh  run_amr_precursor_working_1.sh  run_amr_precursor_working_2.sh  run_amr_precursor_working_3.sh  run_amr_precursor_working_4.sh  run_amr_precursor_working_5.sh  run_test_amr_precursor.sh  run_test_amr_precursor2.sh  (+3 more)
examples/amr_controlled/: amr_input_9_0.inp  read_turbine_specs.py
examples/battery_control_comparison/: simulation.py  simulation_2.py  standalone_simulation.py
examples/demo_forecasting/: construct_time_series_inputs.py  run_script.sh  (+1 more)
tests/: conftest.py  controller_base_test.py  controller_library_test.py  controllers_test.py  estimator_base_test.py  estimator_library_test.py  floris_input.yaml  hercules_v1_interfaces_test.py  hercules_v2_interfaces_test.py  interface_base_test.py  interface_library_test.py  simple_test.py  wake_steering_design_test.py
whoc/: __init__.py  compare_simulations.py  config.py  controller_base.py  estimators.py  helpers.py  plot_output_data.py  plotting.py  postprocess_case_studies.py  python_server.py  simulators.py  utilities.py  zmq_server.py
(+334 files in other folders)
